--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -23,6 +23,18 @@
         app:title="Recipe"
         app:titleTextColor="@color/design_default_color_background" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_help"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -74,11 +86,11 @@
         android:textStyle="italic"
         app:layout_constraintStart_toEndOf="@+id/categoryHeader"
         app:layout_constraintTop_toBottomOf="@+id/mealName" />
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.221"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerImage" />
+    app:layout_constraintBottom_toTopOf="@+id/textView2"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.221"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/headerImage" />
 
     <ImageView
         android:id="@+id/headerImage"
@@ -157,5 +169,6 @@
         android:text="@string/SendToEmailButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmailSenderHeader" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
