--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,96 +29,65 @@
         tools:openDrawer="start">
 
         <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
-            app:menu="@menu/drawer_menu"
-            android:id="@+id/nav_view"/>
+            android:visibility="gone"
+            app:menu="@menu/drawer_menu" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".result_page">
 
-            <TextView
-                android:id="@+id/tv_instructions"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="enter area then click resul page button"
-                app:layout_constraintBottom_toBottomOf="parent"
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView3"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.093"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/homePageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Home"
-                app:layout_constraintBottom_toTopOf="@+id/resultPageBtn"
-                app:layout_constraintEnd_toStartOf="@+id/fragmentPageBtn"
-                app:layout_constraintHorizontal_bias="0.503"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.75" />
+                app:srcCompat="@drawable/cooking_image" />
 
             <Button
                 android:id="@+id/resultPageBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="64dp"
+                android:layout_marginTop="8dp"
                 android:text="Result Page"
-                app:layout_constraintBottom_toTopOf="@+id/tv_instructions"
-                app:layout_constraintEnd_toStartOf="@+id/favouritesPageBtn"
-                app:layout_constraintHorizontal_bias="0.545"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <Button
-                android:id="@+id/fragmentPageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="48dp"
-                android:text="Fragment"
-                app:layout_constraintBottom_toTopOf="@+id/favouritesPageBtn"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.75" />
-
-            <Button
-                android:id="@+id/favouritesPageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="64dp"
-                android:text="Favourites"
-                app:layout_constraintBottom_toTopOf="@+id/tv_instructions"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_area" />
 
             <EditText
                 android:id="@+id/et_area"
-                android:layout_width="143dp"
+                android:layout_width="300dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="60dp"
+                android:layout_marginTop="17dp"
                 android:ems="10"
                 android:hint="enter Area"
                 android:inputType="textPersonName"
-                android:text="canadian"
+                app:layout_constraintBottom_toTopOf="@+id/resultPageBtn"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/resultPageBtn" />
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="this button will crash the app, Use the Result Page and click on a recipe to open the RecipePage"
+                android:layout_marginTop="58dp"
+                android:text="Enter an area to find recipe's"
                 android:textAlignment="center"
-                app:layout_constraintBottom_toTopOf="@+id/fragmentPageBtn"
+                app:layout_constraintBottom_toTopOf="@+id/et_area"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/homePageBtn" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
