--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -89,11 +89,6 @@
         android:textStyle="italic"
         app:layout_constraintStart_toEndOf="@+id/categoryHeader"
         app:layout_constraintTop_toBottomOf="@+id/mealName" />
-    app:layout_constraintBottom_toTopOf="@+id/textView2"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.221"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/headerImage" />
 
     <ImageView
         android:id="@+id/headerImage"
@@ -112,9 +107,10 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="10dp"
         android:lineSpacingExtra="8sp"
@@ -160,7 +156,7 @@
         android:layout_marginBottom="5dp"
         android:text="@string/EmailSenderHeader"
         android:textColor="@color/black"
-        android:textSize="17sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
